src/objects/uw_Links__c.object
<CustomObject>
    <customHelpPage>bc_help_pop_up6</customHelpPage>
    <fields>
        <fullName>BC_Link_Type__c</fullName>
        <label>Brand Centre Link Type</label>
        <picklist>
            <picklistValues>
                <fullName>Brand Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brands - Brand Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brands - Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Essentials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Categories - Brand Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Categories - Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Induction Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Resources - Brand Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Resources - Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Who is Who</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BC_Ordinal__c</fullName>
        <label>Brand Centre Ordinal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category_Image_URL__c</fullName>
        <label>Category Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_Category_New__c</fullName>
        <label>Section Header Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Category__c</fullName>
        <label>Link Category</label>
        <picklist>
            <picklistValues>
                <fullName>E-Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further Reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One page overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tools</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Link_Description__c</fullName>
        <label>Link Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Link_Icon__c</fullName>
        <label>Section Header Icon</label>
        <picklist>
            <picklistValues>
                <fullName>E-Learning</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Further Reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Page Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tools</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Link_Name__c</fullName>
        <label>Link Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Output__c</fullName>
        <formula>IF( 
OR((CONTAINS( Link_URL__c, &quot;http&quot;) &amp;&amp; CONTAINS(Link_URL__c, &quot;unilever&quot;)),
(CONTAINS( Link_URL__c, &quot;https&quot;) &amp;&amp; CONTAINS(Link_URL__c, &quot;unilever&quot;)),
(CONTAINS( Link_URL__c, &quot;https&quot;) &amp;&amp; CONTAINS(Link_URL__c, &quot;force&quot;)),
(CONTAINS( Link_URL__c ,&quot;www&quot;) &amp;&amp; CONTAINS(Link_URL__c,&quot;http&quot;)) ) , 
Link_URL__c, 
if(CONTAINS(Link_URL__c, &quot;sfc&quot;) , substitute(Link_URL__c,&quot;http://&quot;,&quot;&quot;),  
&quot;http://&quot; +Link_URL__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link Output</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Type__c</fullName>
        <label>Link Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_URL__c</fullName>
        <label>Link URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Related_Collaboration_Group__c</fullName>
        <description>This field is used for Pinnovate Wall Links - and links this record to the related Collaboration Group</description>
        <externalId>true</externalId>
        <label>Related Collaboration Group</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Feed_Item__c</fullName>
        <description>This field is used to hold the feed item id that links this record to a feed item in the related collaboration group</description>
        <externalId>true</externalId>
        <label>Related Feed Item</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Categorys__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Category</label>
        <referenceTo>Sub_Category__c</referenceTo>
        <relationshipLabel>Links</relationshipLabel>
        <relationshipName>Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>uw_BET__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BET</label>
        <referenceTo>uw_BET__c</referenceTo>
        <relationshipLabel>Links</relationshipLabel>
        <relationshipName>Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>uw_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>uw_Brand__c</referenceTo>
        <relationshipLabel>Whos Who Links</relationshipLabel>
        <relationshipName>B_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Links</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Link_Name__c</columns>
        <columns>Link_URL__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Link_Type__c</columns>
        <columns>uw_Brand__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Link_Type__c</field>
            <operation>equals</operation>
            <value>Whos Who</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BL-{0000}</displayFormat>
        <label>Brand Links Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Links</pluralLabel>
    <recordTypes>
        <fullName>Brand_Centre_Links</fullName>
        <active>true</active>
        <description>Create a Brand Centre Link</description>
        <label>Brand Centre Links</label>
    </recordTypes>
    <recordTypes>
        <fullName>HUB_Working_Resources</fullName>
        <active>true</active>
        <label>HUB - Working Resources</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pinnovate_Wall_Link</fullName>
        <active>true</active>
        <description>Used for Pinning Links to the pinnovate wall for a group</description>
        <label>Pinnovate Wall Link</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>